--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.0.0'
     compile 'com.android.support:design:23.2.0'
     compile 'com.firebase:firebase-client-android:2.3.1'
+    compile 'com.github.clans:fab:1.6.2'
     compile 'com.google.android.gms:play-services-auth:9.0.1'
     compile 'com.google.android.gms:play-services-maps:9.0.1'
     compile 'com.google.firebase:firebase-auth:9.0.1'
